# skypco_cw_database

./: README.md  config.py  main.py  pyproject.toml
src/: app.py  vacancy.py
src/api/: base_api.py  hh_api.py
src/database/: DBManager.py  queries.sql
src/utils/: import_queries.py
